@@ -35,8 +35,14 @@ Mason - Powerful, high-performance templating for the web and beyond
 
 =head1 SYNOPSIS
 
+  foo.m:
     % my $name = "Mason";
     Hello world! Welcome to <% $name %>.
+
+  #!/usr/local/bin/perl
+  use Mason;
+  my $mason = Mason->new(comp_root => '...');
+  print $mason->run('/foo')->output;
 
 =head1 DESCRIPTION
 
